--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -1,24 +1,24 @@
 <!-- <div class=""> -->
-    <div class="row">
-        <div class="col-12">
-            <app-header></app-header>
-        </div>
+<div class="row">
+    <div class="col-12">
+        <app-header></app-header>
     </div>
-    <div class="row">
-        <div class="col-2">
-            <!-- <app-header></app-header> -->
-            <app-dashboard></app-dashboard>
-        </div>
-    
-    
-        <div class="col-9">
-            <div class="inventory"><br>
-                <h1><b>&nbsp;&nbsp;&nbsp;&nbsp;Inventory Management</b></h1>
-                <br>
-                <div>
-                    <button class="btn btn-primary rounded-pill" (click)="setFormTitle('Inventory')">Add New</button>
-                    <!-- <button class="btn btn-primary rounded-pill">Filters</button> -->
-                    <!-- <div class="dropdown">
+</div>
+<div class="row">
+    <div class="col-2">
+        <!-- <app-header></app-header> -->
+        <app-dashboard></app-dashboard>
+    </div>
+
+
+    <div class="col-9">
+        <div class="inventory"><br>
+            <h1><b>&nbsp;&nbsp;&nbsp;&nbsp;Inventory Management</b></h1>
+            <br>
+            <div>
+                <button class="btn btn-primary rounded-pill" (click)="setFormTitle('Inventory')">Add New</button>
+                <!-- <button class="btn btn-primary rounded-pill">Filters</button> -->
+                <!-- <div class="dropdown">
                         <button class="dropbtn" class="btn btn-primary rounded-pill">Select Agent</button>
                         <div class="dropdown-content">
                             <a href="#">Agent 1</a>
@@ -26,41 +26,41 @@
                             <a href="#">Agent 3</a>
                         </div>
                     </div> -->
-                </div>
-    
-                <div class="pull-right">
-                    <div class="card-body row">
-                        <div class="col-auto">
-                            <i class="fa fa-search icon"></i>
-                        </div>
-                        <!--end of col-->
-                        <div class="col">
-                            <input class="form-control" id="myInput" type="text" [(ngModel)]="general_search" placeholder="Search topic or keyword">
-                        </div>
-    
-                        <button onclick="window.print()" class="btn btn-primary rounded-pill">Print</button>
-                        <button class="btn btn-primary rounded-pill">Excel</button>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
+
+            <div class="pull-right">
+                <div class="card-body row">
+                    <div class="col-auto">
+                        <i class="fa fa-search icon"></i>
                     </div>
+                    <!--end of col-->
+                    <div class="col">
+                        <input class="form-control" id="myInput" type="text" [(ngModel)]="general_search" placeholder="Search topic or keyword">
+                    </div>
+
+                    <button onclick="window.print()" class="btn btn-primary rounded-pill">Print</button>
+                    <button class="btn btn-primary rounded-pill">Excel</button>&nbsp;&nbsp;&nbsp;&nbsp;
                 </div>
-                <br><br><br>
-                <!-- Inventory management table is below -->
-    
-                <table class="table table-hover">
-                    <thead>
-                        <th scope="col">ID</th>
-                        <th scope="col">Location</th>
-                        <th scope="col">Area</th>
-                        <th scope="col">Type</th>
-                        <th scope="col">Demand</th>
-                        <th scope="col">Purpose</th>
-                        <th scope="col">Beds</th>
-                        <th scope="col">Client Details</th>
-                        <th scope="col">Agent Assigned</th>
-                        <th scope="col">Operations</th>
-                    </thead>
-    
-                    <tbody>
-                        <!-- <td>
+            </div>
+            <br><br><br>
+            <!-- Inventory management table is below -->
+
+            <table class="table table-hover">
+                <thead>
+                    <th scope="col">ID</th>
+                    <th scope="col">Location</th>
+                    <th scope="col">Area</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Demand</th>
+                    <th scope="col">Purpose</th>
+                    <th scope="col">Beds</th>
+                    <th scope="col">Client Details</th>
+                    <th scope="col">Agent Assigned</th>
+                    <th scope="col">Operations</th>
+                </thead>
+
+                <tbody>
+                    <!-- <td>
                     <input class="form-control" type="text" [(ngModel)]="search_id" placeholder="Search ID">
                 </td>
                 <td>
@@ -90,58 +90,58 @@
                 <td>
                     <i class="fa fa-search icon"></i>
                 </td> -->
-                        <tr *ngFor="let user of user | filter: general_search">
-                            <!-- | tableFilter05: search_demand | tableFilter04: search_type | tableFilter03: search_area | tableFilter02: search_location | tableFilter: search_id | filter: general_search"> -->
-                            <td>{{ user._id }}</td>
-                            <!-- <td>
+                    <tr *ngFor="let user of user | filter: general_search">
+                        <!-- | tableFilter05: search_demand | tableFilter04: search_type | tableFilter03: search_area | tableFilter02: search_location | tableFilter: search_id | filter: general_search"> -->
+                        <td>{{ user.referenceId }}</td>
+                        <!-- <td>
                                 <span *ngFor="let loc of user.location">{{ loc.location }}<br></span>
                             </td> -->
-    
-    
-    
-                            <td>
-                                {{user.city[0]?.city}}<span>&nbsp;&nbsp;</span><br><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},  </span>
-                            </td>
-    
-                            <td>{{ user.area }}</td>
-                            <td>{{ user.client_type }}</td>
-                            <td>{{ user.demand_price }}</td>
-                            <td>{{ user.property_purpose }}</td>
-                            <td>{{ user.beds_number }}</td>
-                            <td><b>Name : </b>{{ user.client_name }} <br> <b>Number : </b>{{ user.client_number}}</td>
-                            <td>{{ user.assigned_to }}</td>
-                            <td><i class="fa fa-edit icon" (click)="setUser(user)"></i><a (click)="setUser(user)" role="button">Edit</a>
-    
-                                <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i>
-    
-                            </td>
-                            <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+
+
+                        <td>
+                            {{user.city[0]?.city}}<span>&nbsp;&nbsp;</span><br><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},  </span>
+                        </td>
+
+                        <td>{{ user.area }}</td>
+                        <td>{{ user.client_type }}</td>
+                        <td>{{ user.demand_price }}</td>
+                        <td>{{ user.property_purpose }}</td>
+                        <td>{{ user.beds_number }}</td>
+                        <td><b>Name : </b>{{ user.client_name }} <br> <b>Number : </b>{{ user.client_number}}</td>
+                        <td>{{ user.assigned_to }}</td>
+                        <td><i class="fa fa-edit icon" (click)="setUser(user)"></i><a (click)="setUser(user)" role="button">Edit</a>
+
+                            <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i>
+
+                        </td>
+                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            Are you sure you want to delete it?
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                    </div>
+                                    <div class="modal-body">
+                                        Are you sure you want to delete it?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
               Close
             </button>
-                                            <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteInventory()">
+                                        <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteInventory()">
               Delete
             </button>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </tr>
-                    </tbody>
-    
-                </table>
-            </div>
+                        </div>
+                    </tr>
+                </tbody>
+
+            </table>
         </div>
     </div>
+</div>
