--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -16,18 +16,6 @@
         </div>
     </div>
     <div class="row">
-        <!-- <div class="col-sm-5 col-md-5 left">
-            <div>
-
-                <img class="left-img" src="assets/icons/asasa.gif" />
-            </div>
-        </div>
-
-        <div class="col-1 v2" *ngIf="mobileView ==false">
-            <div class="vl"></div>
-            Register
-            <div class="vl"></div>
-        </div> -->
 
         <div class="col-md-11 col-lg-9 col-xl-7 right">
             <div class="register">
@@ -36,9 +24,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <i class="fa fa-user fa" aria-hidden="true"></i>
-                            <input type="text" class="form-control inputs" formControlName="fullname"
-                                placeholder="Full name" autocomplete="off"
-                                [ngClass]="{ 'is-invalid': submitted && f.fullname.errors }" />
+                            <input type="text" class="form-control inputs" formControlName="fullname" placeholder="Full name" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.fullname.errors }" />
                             <div *ngIf="submitted && f.fullname.errors" class="invalid-feedback">
                                 <div *ngIf="f.fullname.errors.required">Name is required</div>
                             </div>
@@ -47,9 +33,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
-                            <input type="text" class="form-control emailInput" formControlName="email" id="email"
-                                autocomplete="off" placeholder="Enter Email"
-                                [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                            <input type="text" class="form-control emailInput" formControlName="email" id="email" autocomplete="off" placeholder="Enter Email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                                 <div *ngIf="f.email.errors.required">Email is required</div>
                                 <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
@@ -60,9 +44,7 @@
                     <div class="form-group" *ngIf="!user">
                         <div class="input-group">
                             <i class="fas fa-unlock"></i>
-                            <input type="password" (keyup)="password($event.target.value, 'Pass')" class="form-control inputs"
-                                formControlName="password" autocomplete="off" placeholder="Password"
-                                [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                            <input type="password" (keyup)="password($event.target.value, 'Pass')" class="form-control inputs" formControlName="password" autocomplete="off" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                                 <div *ngIf="f.password.errors.required">Password is required</div>
                                 <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
@@ -72,9 +54,8 @@
                     <div class="form-group" *ngIf="!user">
                         <div class="input-group">
                             <i class="fas fa-unlock"></i>
-                            <input type="password" (keyup)="password($event.target.value, 'Conf')" class="form-control inputs"
-                                formControlName="confirm_password" autocomplete="off" placeholder="Confirm Password"
-                                [ngClass]="{ 'is-invalid': submitted && f.confirm_password.errors }" />
+                            <input type="password" (keyup)="password($event.target.value, 'Conf')" class="form-control inputs" formControlName="confirm_password" autocomplete="off" placeholder="Confirm Password" [ngClass]="{ 'is-invalid': submitted && f.confirm_password.errors }"
+                            />
                             <div *ngIf="submitted && f.confirm_password.errors" class="invalid-feedback">
                                 <div *ngIf="f.confirm_password.errors.required">Password is required</div>
                                 <div *ngIf="f.confirm_password.errors.minlength">Confirm Password must be at least 6 characters</div>
@@ -87,9 +68,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <i class="fas fa-phone"></i>
-                            <input formControlName="contact" type="number" class="form-control inputs"
-                                autocomplete="off" placeholder="Phone Number"
-                                [ngClass]="{ 'is-invalid': submitted && f.contact.errors }" />
+                            <input formControlName="contact" type="number" class="form-control inputs" autocomplete="off" placeholder="Phone Number" [ngClass]="{ 'is-invalid': submitted && f.contact.errors }" />
                             <div *ngIf="submitted && f.contact.errors" class="invalid-feedback">
                                 <div *ngIf="f.contact.errors.required">Contact is required</div>
                             </div>
@@ -101,9 +80,7 @@
                         <div class="input-group">
                             <!-- <b>Select City</b> -->
                             <i class="fas fa-building"></i>
-                            <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="_id"
-                                placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }"
-                                (change)="changeCity($event)">
+                            <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="_id" placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" (change)="changeCity($event)">
                             </ng-select>
                             <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
                                 <div *ngIf="f.city.errors.required">City is required</div>
@@ -114,10 +91,7 @@
                         <div class="input-group">
                             <!-- <b>Select City</b> -->
                             <i class="fas fa-building"></i>
-                            <ng-select [(ngModel)]="user.city.city" [ngModelOptions]="{standalone: true}"
-                                class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city"
-                                placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }"
-                                (change)="changeCity($event)">
+                            <ng-select [(ngModel)]="user.city.city" [ngModelOptions]="{standalone: true}" class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" (change)="changeCity($event)">
                             </ng-select>
                             <!-- {{user.city.city}} -->
                             <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
@@ -130,10 +104,7 @@
                         <div class="input-group">
                             <!-- <b>Select Location</b> -->
                             <i class="fas fa-street-view"></i>
-                            <ng-select [(ngModel)]="selectStringLocations" [multiple]="true"
-                                [ngModelOptions]="{standalone: true}" class="ng-select inputs2" [items]="locations"
-                                bindLabel="location" bindValue="location" placeholder="Select Location"
-                                (change)="changeLocation($event)">
+                            <ng-select [(ngModel)]="selectStringLocations" [multiple]="true" [ngModelOptions]="{standalone: true}" class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                             </ng-select>
                             <!-- {{user.location[0].location}} -->
                         </div>
@@ -142,9 +113,7 @@
                         <div class="input-group">
                             <!-- <b>Select Location</b> -->
                             <i class="fas fa-street-view"></i>
-                            <ng-select class="ng-select inputs2" [multiple]="true" [items]="locations"
-                                bindLabel="location" bindValue="location" placeholder="Select Location"
-                                (change)="changeLocation($event)">
+                            <ng-select class="ng-select inputs2" [multiple]="true" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                             </ng-select>
                         </div>
                     </div>
@@ -153,8 +122,7 @@
                         <div class="input-group">
                             <!-- <b>Select Access</b> -->
                             <i class="fas fa-universal-access"></i>
-                            <ng-select class="ng-select inputs2" [items]="accessType" bindLabel="access"
-                                bindValue="access" placeholder="Select Access Type" (change)="changeAccess($event)">
+                            <ng-select class="ng-select inputs2" [items]="accessType" bindLabel="access" bindValue="access" placeholder="Select Access Type" (change)="changeAccess($event)">
                                 <!-- <ng-select class="ng-select inputs2" [items]="access" bindLabel="access" bindValue="access" placeholder="Select Access Type" (change)="changeAccess($event)">
                             <option>dasdas</option> -->
                             </ng-select>
@@ -164,9 +132,7 @@
                         <div class="input-group">
                             <!-- <b>Select Access</b> -->
                             <i class="fas fa-universal-access"></i>
-                            <ng-select [(ngModel)]="user.access" [ngModelOptions]="{standalone: true}"
-                                class="ng-select inputs2" [items]="accessType" bindLabel="access" bindValue="access"
-                                placeholder="Select Access Type" (change)="changeAccess($event)">
+                            <ng-select [(ngModel)]="user.access" [ngModelOptions]="{standalone: true}" class="ng-select inputs2" [items]="accessType" bindLabel="access" bindValue="access" placeholder="Select Access Type" (change)="changeAccess($event)">
                                 <!-- <ng-select class="ng-select inputs2" [items]="access" bindLabel="access" bindValue="access" placeholder="Select Access Type" (change)="changeAccess($event)">
                             <option>dasdas</option> -->
                             </ng-select>
