--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.html
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.html
@@ -482,7 +482,7 @@
                     <div class="col-md-12 col-sm-12">
                         <br><br>
                         <div class="form-group" class="pull-right">
-                            <button (click)="submitForm()" class="btn btn1 btn-primary">{{ad}}</button>
+                            <button (click)="submitForm()" class="btn btn1 btn-primary">{{formSendingStatus}}</button>
                             <br><br><br>
                         </div>
                     </div>
