--- a/src/app/dashboard/users/users.component.html
+++ b/src/app/dashboard/users/users.component.html
@@ -12,12 +12,12 @@
         <div class="col-10">
             <div class="user-class">
                 <br>
-                <h1><b>&nbsp;&nbsp;&nbsp;&nbsp;Users</b></h1>
+                <h1><b>Users</b></h1>
                 <br>
 
                 <div class="row">
                     <div class="col-2">
-                        <button class="btn btn-primary rounded-pill" routerLink="/register">Add New</button>
+                        <button class="btn btn-primary" routerLink="/register">Add New</button>
                     </div>
                     <div class="col-4">
                         <div class="card-body ">
@@ -29,7 +29,7 @@
                 </div>
                 <br><br><br>
                 <!-- Inventory management table is below -->
-                <table class="table table-hover" class="table table-hover table-light">
+                <table class="table table-hover" class="table table-hover">
                     <thead>
                         <tr>
                             <th scope="col">User ID</th>
