--- a/src/app/dashboard/leads/leads.component.css
+++ b/src/app/dashboard/leads/leads.component.css
@@ -14,7 +14,7 @@ th {
 }
 
 .fa {
-    margin-left: 25px;
+    margin-left: 8px;
 }
 
 .icon {
@@ -22,7 +22,7 @@ th {
 }
 
 .btn {
-    margin-left: 25px;
+    /* margin-left: 25px; */
     width: 100px;
     font-size: 14px;
     background-color: #38baa2;
@@ -34,36 +34,38 @@ th {
     border: none;
     border: 1px solid whitesmoke;
 }
-@media only screen and (max-width: 1650px){
-   
+
+@media only screen and (max-width: 1650px) {
     .leads {
         margin-left: 50px;
     }
 }
-@media only screen and (min-width: 1200px)and (max-width: 1400px){
-   
+
+@media only screen and (min-width: 1200px)and (max-width: 1400px) {
     .leads {
         margin-left: 80px;
     }
 }
-@media only screen and (max-width: 1200px){
-   
+
+@media only screen and (max-width: 1200px) {
     .leads {
         margin-left: 100px;
     }
 }
-@media only screen and (max-width: 1100px){
-   
+
+@media only screen and (max-width: 1100px) {
     .leads {
         margin-left: 120px;
     }
 }
-@media only screen and (max-width: 992px){
-   
+
+@media only screen and (max-width: 992px) {
     .leads {
         margin-left: -80px;
     }
 }
+
+
 /* 
 .form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
     border: none;
