--- a/src/app/dashboard/users/users.component.css
+++ b/src/app/dashboard/users/users.component.css
@@ -23,15 +23,11 @@ th {
 } */
 
 .fa {
-    margin-left: 25px;
-}
-
-.icon {
-    margin-top: 14px;
+    margin-left: 10px;
 }
 
 .btn {
-    margin-left: 20px;
+    /* margin-left: 20px; */
     width: 100px;
     font-size: 14px;
     background-color: #38baa2;
@@ -39,41 +35,42 @@ th {
     border: 1px solid transparent;
 }
 
+
 /* .form-control-borderless {
     border: none;
     border: 1px solid whitesmoke;
 } */
 
-@media only screen and (max-width: 1650px){
-   
+@media only screen and (max-width: 1650px) {
     .user-class {
         margin-left: 50px;
     }
 }
-@media only screen and (min-width: 1200px)and (max-width: 1400px){
-   
+
+@media only screen and (min-width: 1200px)and (max-width: 1400px) {
     .user-class {
         margin-left: 80px;
     }
 }
-@media only screen and (max-width: 1200px){
-   
+
+@media only screen and (max-width: 1200px) {
     .user-class {
         margin-left: 100px;
     }
 }
-@media only screen and (max-width: 1100px){
-   
+
+@media only screen and (max-width: 1100px) {
     .user-class {
         margin-left: 120px;
     }
 }
-@media only screen and (max-width: 992px){
-   
+
+@media only screen and (max-width: 992px) {
     .user-class {
         margin-left: -80px;
     }
 }
+
 
 /* 
 .form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
