--- a/src/app/dashboard/users/users.component.html
+++ b/src/app/dashboard/users/users.component.html
@@ -29,7 +29,7 @@
                 </div>
                 <br><br><br>
                 <!-- Inventory management table is below -->
-                <table class="table table-hover" class="table table-hover">
+                <table class="table table-hover">
                     <thead>
                         <tr>
                             <th scope="col">User ID</th>
