--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.html
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.html
@@ -52,17 +52,17 @@
                     <div class="col-md-5 col-sm-5"><br><br>
                         <div class="radio">
                             <div class="btn-group btn-group-toggle">
-                                <label class="btn btn-secondary" [class.active]="addinventoryForm.get('property_purpose').value === 'Buy'">
-                      <input type="radio" formControlName="property_purpose"  value="Buy" autocomplete="off" checked> Buy
+                                <label class="btn btn-primary" [class.active]="addinventoryForm.get('property_purpose').value === 'Buy'">
+                      <input type="radio" formControlName="property_purpose"  value="Buy"> Buy
                     </label>
-                                <label class="btn btn-secondary" [class.active]="addinventoryForm.get('property_purpose').value === 'Sell'">
-                      <input type="radio"    formControlName="property_purpose"  value="Sell" autocomplete="off"> Sell
+                                <label class="btn btn-primary" [class.active]="addinventoryForm.get('property_purpose').value === 'Sell'">
+                      <input type="radio"    formControlName="property_purpose"  value="Sell"> Sell
                     </label>
-                                <label class="btn btn-secondary" [class.active]="addinventoryForm.get('property_purpose').value === 'Rent'">
-                      <input type="radio"    formControlName="property_purpose"   value="Rent" autocomplete="off"> Rent
+                                <label class="btn btn-primary" [class.active]="addinventoryForm.get('property_purpose').value === 'Rent'">
+                      <input type="radio"    formControlName="property_purpose"   value="Rent"> Rent
                     </label>
-                                <label class="btn btn-secondary" [class.active]="addinventoryForm.get('property_purpose').value === 'Rent-Out'">
-                  <input type="radio"    formControlName="property_purpose"  value="Rent-Out" autocomplete="off"> Rent-Out
+                                <label class="btn btn-primary" [class.active]="addinventoryForm.get('property_purpose').value === 'Rent-Out'">
+                  <input type="radio"    formControlName="property_purpose"  value="Rent-Out"> Rent-Out
                 </label>
                             </div>
                         </div>
@@ -72,18 +72,6 @@
                 </div>
                 <br><br>
                 <div class="row  offset-1">
-                    <!-- City and Location Select -->
-
-                    <!-- <ng-select class="ng-select" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" (change)="changeCity($event)">
-                        </ng-select>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <ng-select class="ng-select" [items]="locations" [multiple]="true" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
-                        </ng-select> -->
-
-
-
-                    <!--  -->
-
                     <!-- City -->
                     <div class="form-group" *ngIf="!user1">
                         <div class="input-group">
@@ -118,9 +106,7 @@
 
                     <div class="form-group" *ngIf="!user1">
                         <div class="input-group">
-                            <!-- <b>Select Location</b> -->
-                            <!-- <i class="fas fa-street-view"></i> -->
-                            <ng-select class="ng-select inputs2" [(ngModel)]="selectStringLocations" [multiple]="true" [ngModelOptions]="{standalone: true}" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" [ngClass]="{ 'is-invalid': submitted && f.location.errors }"
+                            <ng-select class="ng-select inputs2" [(ngModel)]="selectStringLocations" [ngModelOptions]="{standalone: true}" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" [ngClass]="{ 'is-invalid': submitted && f.location.errors }"
                                 (change)="changeLocation($event)">
                             </ng-select>
                             <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
@@ -128,15 +114,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- <div class="form-group" *ngIf="!user1">
-                            <div class="input-group">
-                                <ng-select class="ng-select" [multiple]="true" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
-                                </ng-select>
-                            </div>
-                        </div> -->
-
-                    <!--  -->
 
                     <!-- Sub Property Type  -->
                     <div class="col-md-4 col-sm-4">
@@ -284,7 +261,7 @@
             <!-- Price Range -->
             <div *ngIf="addinventoryForm.get('property_purpose').value === 'Buy' || addinventoryForm.get('property_purpose').value === 'Rent' ">
 
-                <div class="offset-1" style="color: red" *ngIf="isInvalid">Please check your PRICE ranges</div>
+                <div class="offset-1" style="color: red" *ngIf="isInvalidPrice">Please check your PRICE ranges</div>
                 <div class="row offset-1">
                     <br>
                     <br> <b class="price">Price Range</b>
@@ -293,7 +270,7 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="form-group">
                             <div class="">
-                                <input type="number" placeholder="Min" class="form-control" formControlName="min_price" name="greaterThanValue" [(ngModel)]="greaterThanValue" (ngModelChange)="onChangePrice($event)" required autocomplete="off" />
+                                <input type="number" placeholder="Min" class="form-control" formControlName="min_price" name="minimumPriceRange" [(ngModel)]="minimumPriceRange" (ngModelChange)="onChangePrice($event)" />
                                 <!-- <input type="number" placeholder="Max" class="form-control" formControlName="max_price" required autocomplete="off" /> -->
                                 <!-- <div *ngIf="submitted && f.demand.errors" class="invalid-feedback">
                                 <div *ngIf="f.demand.errors.required">Demand is required</div>
@@ -305,8 +282,8 @@
                         <div class="form-group">
                             <div class="">
                                 <!-- <input type="number" placeholder="Min" class="form-control" formControlName="min_price" required autocomplete="off" /> -->
-                                <input type="number" placeholder="Max" class="form-control" formControlName="max_price" name="lessThanValue" [(ngModel)]="lessThanValue" (ngModelChange)="onChangePrice($event)">
-                                <input type="submit" required autocomplete="off" />
+                                <input type="number" placeholder="Max" class="form-control" formControlName="max_price" name="maximumPriceRange" [(ngModel)]="maximumPriceRange" (ngModelChange)="onChangePrice($event)">
+                                <!-- <input type="submit" required autocomplete="off" /> -->
 
                             </div>
                         </div>
@@ -320,7 +297,7 @@
                         <div class="form-group">
                             <div class="">
                                 <br> <b>Demand </b>
-                                <input type="number" placeholder="" class="form-control" formControlName="demand_price" required autocomplete="off" />
+                                <input type="number" placeholder="" class="form-control" formControlName="demand_price" autocomplete="off" />
 
                             </div>
                         </div>
@@ -329,7 +306,7 @@
             </div>
             <!-- Area Range -->
             <div *ngIf="addinventoryForm.get('property_purpose').value === 'Buy' || addinventoryForm.get('property_purpose').value === 'Rent' ">
-                <div class="offset-1" style="color: red" *ngIf="isInvalid1">Please check your AREA ranges</div>
+                <div class="offset-1" style="color: red" *ngIf="isInvalidArea">Please check your AREA ranges</div>
                 <div class="row offset-1">
                     <br> <b class="price">Area Range</b>
                 </div>
@@ -337,22 +314,22 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="form-group">
                             <div class="">
-                                <input type="number" placeholder="Min" class="form-control" formControlName="min_area" name="greaterThanValue1" [(ngModel)]="greaterThanValue1" (ngModelChange)="onChangeArea($event)" required autocomplete="off" />
-                                <!-- <input type="number" placeholder="Max" class="form-control" formControlName="max_area" required autocomplete="off" /> -->
-
+                                <input type="number" placeholder="Min" class="form-control" formControlName="min_area" name="minimumAreaRange" [(ngModel)]="minimumAreaRange" (ngModelChange)="onChangeArea($event)" />
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
                         <div class="form-group">
                             <div class="">
-                                <!-- <br> <b>Area Range</b> -->
-                                <!-- <input type="number" placeholder="Min" class="form-control" formControlName="min_area" required autocomplete="off" /> -->
-                                <input type="number" placeholder="Max" class="form-control" formControlName="max_area" required autocomplete="off" name="lessThanValue1" [(ngModel)]="lessThanValue1" (ngModelChange)="onChangeArea($event)" />
-
+                                <input type="number" placeholder="Max" class="form-control" formControlName="max_area" name="maximumAreaRange" [(ngModel)]="maximumAreaRange" (ngModelChange)="onChangeArea($event)" />
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <!-- Area Unit -->
+            <div *ngIf="addinventoryForm.get('property_purpose').value === 'Buy' || addinventoryForm.get('property_purpose').value === 'Rent' ">
+                <div class="row offset-1">
                     <div class="col-md-8 col-sm-4">
 
                         <!-- <div class="col-md-5 col-sm-5"><br><br> -->
@@ -381,8 +358,13 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="form-group">
                         <div> <b>Beds Number</b>
-                            <input formControlName="beds_number" class="form-control" type="number" />
-                        </div><b class="steps">Step 7: Select Beds</b>
+                            <input type="number" class="form-control" formControlName="beds_number" [ngClass]="{ 'is-invalid': submitted && f.beds_number.errors }" />
+                        </div>
+                        <b class="steps">Step 7: Select Beds</b>
+                        <div *ngIf="submitted && f.beds_number.errors" class="invalid-feedback">
+                            dasd
+                            <div *ngIf="f.beds_number.errors.required">Beds number is required</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -393,7 +375,7 @@
                         <div class="form-group">
                             <div>
                                 <b>Simple Area</b>
-                                <input type="number" class="form-control" formControlName="area" required autocomplete="off" />
+                                <input type="number" class="form-control" formControlName="area" autocomplete="off" />
                                 <!-- <div *ngIf="submitted && f.land_area.errors" class="invalid-feedback">
                                 <div *ngIf="f.land_area.errors.required">Land Area is required</div>
                             </div> -->
@@ -428,8 +410,12 @@
 
                 <div class="col-md-4 col-sm-4 form-group">
                     <div class=""> <b>Client Name</b>
-                        <input formControlName="client_name" class="form-control" type="text" />
+                        <input formControlName="client_name" class="form-control" type="text" [ngClass]="{ 'is-invalid': submitted && f.client_name.errors }" />
                     </div><b class="steps">Step 8: Select Client Name</b>
+
+                    <div *ngIf="submitted && f.client_name.errors" class="invalid-feedback">
+                        <div *ngIf="f.client_name.errors.required">client_name is required</div>
+                    </div>
                 </div>
                 <div class="col-md-4 col-sm-4 form-group">
                     <div class=""> <b>Client Number</b>
@@ -502,8 +488,6 @@
                 <button type="submit" class="btn btn1 btn-primary">{{formSendingStatus}}</button>
                 <br><br><br>
             </div>
-            <!-- </div> -->
-            <!-- </div> -->
         </form>
 
     </div>
