--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -51,14 +51,14 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Confirm Password -->
                     <div class="form-group" *ngIf="!user">
                         <div class="input-group">
                             <i class="fas fa-unlock"></i>
                             <input type="password" (keyup)="password($event.target.value, 'Conf')" class="form-control inputs" formControlName="confirm_password" autocomplete="off" placeholder="Confirm Password" [ngClass]="{ 'is-invalid': submitted && f.confirm_password.errors }"
                             />
                             <div *ngIf="submitted && f.confirm_password.errors" class="invalid-feedback">
-                                <div *ngIf="f.confirm_password.errors.required">Password is required</div>
-                                <div *ngIf="f.confirm_password.errors.minlength">Confirm Password must be at least 6 characters</div>
+                                <div *ngIf="f.confirm_password.errors.required">Confirm Password is required</div>
                             </div>
                         </div>
                         <div *ngIf="!submitted" class="texts">{{abc}}</div>
@@ -80,11 +80,11 @@
                         <div class="input-group">
                             <!-- <b>Select City</b> -->
                             <i class="fas fa-building"></i>
-                            <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="_id" placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" (change)="changeCity($event)">
+                            <ng-select class="ng-select inputs2 notvalid" [items]="cities" bindLabel="city" bindValue="_id" placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" (change)="changeCity($event)" required>
                             </ng-select>
-                            <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
+                            <!-- <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
                                 <div *ngIf="f.city.errors.required">City is required</div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="form-group" *ngIf="user">
