--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,39 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom: 1px solid #39bba4; padding: 0 15px;">
-    <a class="navbar-brand" href="#">
-        <img src="assets/icons/Asasa-Logo.png">
-        <!-- <span class="lead">Asasa Real State</span> -->
-    </a>
-    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button> -->
+<nav
+  class="navbar navbar-expand-lg navbar-light bg-light"
+  style="border-bottom: 1px solid #39bba4; padding: 0 15px"
+>
+  <a class="navbar-brand" href="#">
+    <img src="assets/icons/Asasa-Logo.png" />
+  </a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-        <!-- <ul class="navbar-nav ml-auto mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/inventory">Leads
-                    <i class="fas fa-phone-volume"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/inventory">Users
-                    <i class="fas fa-users"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/inventory">Inventory
-                    <i class="fas fa-file-alt"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" *ngIf="isLogin()" (click)="logout()">Logout</a>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0 d-none d-xl-block">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
-    </div>
-
+  <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
 </nav>
