--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
@@ -4,6 +4,7 @@
 }
 
 .ng-select {
+    margin-left: 15px;
     display: block;
     position: relative;
     width: 300px;
@@ -235,9 +236,10 @@ img {
     border-color: #38bba2;
 }
 
-.radio-mid {
+
+/* .radio-mid {
     margin-top: 200px
-}
+} */
 
 .center {
     display: flex;
@@ -526,7 +528,36 @@ textarea.question:invalid~input[type="submit"] {
 
 .register-heading {
     text-align: center;
-    /* margin-top: 8%; */
-    margin-bottom: -8%;
+    margin-top: 100px;
     color: #495057;
+}
+
+@media only screen and (max-width: 1650px) {
+    .inventoryForm {
+        margin-left: 50px;
+    }
+}
+
+@media only screen and (min-width: 1200px)and (max-width: 1400px) {
+    .inventoryForm {
+        margin-left: 80px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .inventoryForm {
+        margin-left: 100px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .inventoryForm {
+        margin-left: 120px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .inventoryForm {
+        margin-left: -80px;
+    }
 }
