--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -82,9 +82,9 @@
                             <i class="fas fa-building"></i>
                             <ng-select class="ng-select inputs2 notvalid" [items]="cities" bindLabel="city" bindValue="_id" placeholder="Select City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" (change)="changeCity($event)" required>
                             </ng-select>
-                            <!-- <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
+                            <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
                                 <div *ngIf="f.city.errors.required">City is required</div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="form-group" *ngIf="user">
