--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,132 +1,95 @@
-<<<<<<< HEAD
-=======
-<!-- <link
-  href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-  rel="stylesheet"
-  id="bootstrap-css"
-/>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-
-<head>
-  <meta
-    name="description"
-    content="Responsive sidebar template with sliding effect and dropdown menu based on bootstrap 3"
-  />
-  <title>Sidebar template</title>
-  <link
-    rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous"
-  />
-  <link
-    href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
-    rel="stylesheet"
-  />
-</head> -->
-
->>>>>>> 6a035b51d6c3c16ecafb863fb602c3cb9d06a5a4
 <div class="page-wrapper chiller-theme toggled">
-  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-    <i class="fas fa-bars"></i>
-  </a>
-  <nav id="sidebar" class="sidebar-wrapper">
-    <div class="sidebar-content">
-      <!-- <div class="sidebar-brand">
-        <a routerLink="/">AGENT DASHBOARD</a>
-      </div> -->
-      <div class="sidebar-header">
-        <div class="user-pic">
-          <img
-            class="img-responsive img-rounded"
-            src="https://bootdey.com/img/Content/avatar/avatar6.png"
-          />
-        </div>
-        <div class="user-info">
-          <span class="user-name">{{ tokendata?.fullname }} </span>
-          <span class="user-role">{{ tokendata?.access }}</span>
-          <span class="user-status">
+    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+        <i class="fas fa-bars"></i>
+    </a>
+    <nav id="sidebar" class="sidebar-wrapper">
+        <div class="sidebar-content">
+            <div class="sidebar-header">
+                <div class="user-pic">
+                    <img class="img-responsive img-rounded" src="https://bootdey.com/img/Content/avatar/avatar6.png" />
+                </div>
+                <div class="user-info">
+                    <span class="user-name">{{ tokendata?.fullname }} </span>
+                    <span class="user-role">{{ tokendata?.access }}</span>
+                    <span class="user-status">
             <i class="fa fa-circle"></i>
             <span>Online</span>
-          </span>
-        </div>
-      </div>
+                    </span>
+                </div>
+            </div>
 
-      <div class="sidebar-menu">
-        <ul>
-          <li class="sidebar">
-            <a routerLink="/profile">
-              <i class="fa fa-user"></i>
-              <span>User Profile</span>
-            </a>
-          </li>
+            <div class="sidebar-menu">
+                <ul>
+                    <li class="sidebar">
+                        <a routerLink="/profile">
+                            <i class="fa fa-user"></i>
+                            <span>User Profile</span>
+                        </a>
+                    </li>
 
-          <li class="sidebar">
-            <a routerLink="/agents">
-              <i class="fa fa-users"></i>
-              <span>Agents</span>
-            </a>
-          </li>
-          <li class="sidebar">
-            <a routerLink="/inventory">
-              <i class="fas fa-file-alt"></i>
-              <span>Inventory</span>
-            </a>
-          </li>
-          <li>
-            <a routerLink="/leads">
-              <i class="fas fa-phone-volume"></i>
-              <span>Lead</span>
-            </a>
-          </li>
+                    <li class="sidebar">
+                        <a routerLink="/agents">
+                            <i class="fa fa-users"></i>
+                            <span>Agents</span>
+                        </a>
+                    </li>
+                    <li class="sidebar">
+                        <a routerLink="/inventory">
+                            <i class="fas fa-file-alt"></i>
+                            <span>Inventory</span>
+                        </a>
+                    </li>
+                    <li class="sidebar">
+                        <a routerLink="/leads">
+                            <i class="fas fa-phone-volume"></i>
+                            <span>Lead</span>
+                        </a>
+                    </li>
 
-          <li>
-            <a routerLink="/both">
-              <i class="fas fa-phone-volume"></i>
-              <span>Both</span>
-            </a>
-          </li>
+                    <li class="sidebar">
+                        <a routerLink="/both">
+                            <i class="fas fa-phone-volume"></i>
+                            <span>Both</span>
+                        </a>
+                    </li>
 
-          <li class="sidebar">
-            <a routerLink="/register">
-              <i class="fa fa-tachometer-alt"></i>
-              <span>Register</span>
-            </a>
-          </li>
-          <li class="sidebar">
-            <a routerLink="/map">
-              <i class="fas fa-map"></i>
-              <span>Maps</span>
-              <span class="badge badge-pill badge-info">New</span>
-            </a>
-          </li>
+                    <li class="sidebar">
+                        <a routerLink="/register">
+                            <i class="fa fa-tachometer-alt"></i>
+                            <span>Register</span>
+                        </a>
+                    </li>
+                    <li class="sidebar">
+                        <a routerLink="/map">
+                            <i class="fas fa-map"></i>
+                            <span>Maps</span>
+                            <span class="badge badge-pill badge-info">New</span>
+                        </a>
+                    </li>
 
-          <!-- <li class="sidebar">
+                    <!-- <li class="sidebar">
                         <a routerLink="/both">
                             <i class="fas fa-phone-volume"></i>
                             <span>Both</span>
                         </a>
                     </li> -->
-        </ul>
-      </div>
-      <div class="sidebar-footer">
-        <a routerLink="/" *ngIf="isLogin()" (click)="logout()">
-          <i class="fa fa-lock"></i>
-          <span class="badge badge-pill badge-warning notification"
-            >Log out</span
+                </ul>
+            </div>
+            <div class="sidebar-footer">
+                <a routerLink="/" *ngIf="isLogin()" (click)="logout()">
+                    <i class="fa fa-lock"></i>
+                    <span class="badge badge-pill badge-warning notification">Log out</span
           >
         </a>
         <a routerLink="/profile">
           <i class="fa fa-bell"></i>
           <span class="badge badge-pill badge-success notification">3</span>
-        </a>
-        <a href="#">
-          <i class="fa fa-cog"></i>
-          <span class="badge-sonar"></span>
-        </a>
-      </div>
-    </div>
-  </nav>
+                </a>
+                <a href="#">
+                    <i class="fa fa-cog"></i>
+                    <span class="badge-sonar"></span>
+                </a>
+            </div>
+        </div>
+    </nav>
 </div>
